tests/baselines/reference/typeOfThisInStaticMembers6.errors.txt
typeOfThisInStaticMembers6.ts(6,16): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== typeOfThisInStaticMembers6.ts (1 errors) ====
    class C {
        static f = 1
    }
    
    class D extends C {
        static c = super();
                   ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
    }
    